炫彩编程助手/Data/DemoMgr/VB/Lib/xcgui.bas

Declare Function XEle_SetRectLogic Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect, ByVal bRedraw As Boolean) As Boolean
Declare Sub XEle_GetRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_GetRectLogic Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_GetClientRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_GetWndClientRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Function XEle_GetWidth Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetHeight Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_RectWndClientToEleClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_PointWndClientToEleClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point)
Declare Sub XEle_RectClientToWndClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_PointClientToWndClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point)
Declare Function XEle_AddEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal hChildEle As Long) As Boolean
Declare Function XEle_InsertEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal hChildEle As Long, ByVal index As Long) As Boolean
Declare Sub XEle_RemoveEle Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XEle_AddShape Lib "xcgui.dll" (ByVal hEle As Long, ByVal hShape As Long) As Boolean
Declare Function XEle_SetZOrder Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Boolean
Declare Function XEle_SetZOrderEx Lib "xcgui.dll" (ByVal hEle As Long, ByVal hDestEle As Long, ByVal nType As Long) As Boolean
Declare Function XEle_GetZOrder Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_ShowEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal bShow As Boolean)
Declare Function XEle_GetType Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetHWND Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetHWINDOW Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetCursor Lib "xcgui.dll" (ByVal hEle As Long, ByVal hCursor As Long)
Declare Function XEle_GetCursor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetID Lib "xcgui.dll" (ByVal hEle As Long, ByVal id As Long)
Declare Function XEle_GetID Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetParentEle Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetParent Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetTextColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XEle_GetTextColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetFocusBorderColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XEle_GetFocusBorderColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetFont Lib "xcgui.dll" (ByVal hEle As Long, ByVal hFontx As Long)
Declare Function XEle_GetFont Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetAlpha Lib "xcgui.dll" (ByVal hEle As Long, ByVal alpha As Byte)
Declare Function XEle_GetChildCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetChildByIndex Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Long
Declare Function XEle_GetChildByID Lib "xcgui.dll" (ByVal hEle As Long, ByVal id As Long) As Long
Declare Function XEle_GetChildShapeCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetChildShapeByIndex Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Long
Declare Function XEle_HitChildEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point) As Long
Declare Sub XEle_BindLayoutObject Lib "xcgui.dll" (ByVal hEle As Long, ByVal hLayout As Long)
Declare Function XEle_GetLayoutObject Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetParentLayoutObject Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetUserData Lib "xcgui.dll" (ByVal hEle As Long, ByVal nData As Long)
Declare Function XEle_GetUserData Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_GetContentSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal pSize As size)
Declare Sub XEle_SetCapture Lib "xcgui.dll" (ByVal hEle As Long, ByVal b As Boolean)
Declare Sub XEle_SetLayoutWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal nType As Long, ByVal nWidth As Long)
Declare Sub XEle_SetLayoutHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal nType As Long, ByVal nHeight As Long)
Declare Sub XEle_GetLayoutWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal pType As Long, ByVal pWidth As Long)
Declare Sub XEle_GetLayoutHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal pType As Long, ByVal pHeight As Long)
Declare Sub XEle_RedrawEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal bImmediate As Boolean)
Declare Sub XEle_RedrawRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect, ByVal bImmediate As Boolean)
Declare Sub XEle_Destroy Lib "xcgui.dll" (ByVal hEle As Long)
Declare Sub XEle_AddBkBorder Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte, ByVal width As Long)
Declare Sub XEle_AddBkFill Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XEle_AddBkImage Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Function XEle_GetBkInfoCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_ClearBkInfo Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XEle_GetBkInfoManager Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetStateFlags Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_DrawFocus Lib "xcgui.dll" (ByVal hEle As Long, ByVal hDraw As Long, ByVal pRect As rect) As Boolean
Declare Sub XEle_EnableTransparentChannel Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_SetToolTip Lib "xcgui.dll" (ByVal hEle As Long, ByVal pText As String)
Declare Sub XEle_GetToolTip Lib "xcgui.dll" (ByVal hEle As Long, ByVal pOut As Long, ByVal nOutLen As Long)
Declare Sub XEle_EnableToolTip Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_AdjustLayoutObject Lib "xcgui.dll" (ByVal hEle As Long)
Declare Sub XEle_AdjustLayout Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XEle_RegEventTest Lib "xcgui.dll" (ByVal nEvent As Long, ByVal pParamType As Long) As Boolean
Declare Function XFont_Create Lib "xcgui.dll" (ByVal size As Long) As Long
Declare Function XFont_Create2 Lib "xcgui.dll" (ByVal pName As String, ByVal size As Long, ByVal bBold As Boolean, ByVal bItalic As Boolean, ByVal bUnderline As Boolean, ByVal bStrikeOut As Boolean) As Long
Declare Function XFont_Create3 Lib "xcgui.dll" (ByVal pInfo As xc_font_info_i) As Long
Declare Function XFont_CreateEx Lib "xcgui.dll" (ByVal pFontInfo As LOGFONTW) As Long
Declare Function XFont_CreateFromHFONT Lib "xcgui.dll" (ByVal hFont As Long) As Long
Declare Function XFont_CreateFromFont Lib "xcgui.dll" (ByVal pFont As Long) As Long
Declare Sub XFont_EnableAutoDestroy Lib "xcgui.dll" (ByVal hFontx As Long, ByVal bEnable As Boolean)
Declare Function XFont_GetFont Lib "xcgui.dll" (ByVal hFontx As Long) As Long
Declare Sub XFont_GetFontInfo Lib "xcgui.dll" (ByVal hFontx As Long, ByVal pInfo As xc_font_info_i)
Declare Sub XFont_AddRef Lib "xcgui.dll" (ByVal hFontx As Long)
Declare Sub XFont_Release Lib "xcgui.dll" (ByVal hFontx As Long)
Declare Function XFont_GetRefCount Lib "xcgui.dll" (ByVal hFontx As Long) As Long
Declare Sub XFont_Destroy Lib "xcgui.dll" (ByVal hFontx As Long)
Declare Function XFrameWnd_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pTitle As String, ByVal hWndParent As Long, ByVal XCStyle As Long) As Long
Declare Function XFrameWnd_CreateEx Lib "xcgui.dll" (ByVal dwExStyle As Long, ByVal lpClassName As String, ByVal lpWindowName As String, ByVal dwStyle As Long, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hWndParent As Long, ByVal XCStyle As Long) As Long
Declare Sub XFrameWnd_GetLayoutAreaRect Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pRect As rect)
Declare Sub XFrameWnd_SetView Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hEle As Long)
Declare Sub XFrameWnd_SetPaneSplitBarColor Lib "xcgui.dll" (ByVal hWindow As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XFrameWnd_AddPane Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hPaneDest As Long, ByVal hPaneNew As Long, ByVal align As Long) As Boolean
Declare Function XFrameWnd_MergePane Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hPaneDest As Long, ByVal hPaneNew As Long) As Boolean
Declare Function XImage_LoadFile Lib "xcgui.dll" (ByVal pImageName As String, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadFileAdaptive Lib "xcgui.dll" (ByVal pImageName As String, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Long
Declare Function XImage_LoadFileRect Lib "xcgui.dll" (ByVal pImageName As String, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long) As Long
Declare Function XImage_LoadResAdaptive Lib "xcgui.dll" (ByVal id As Long, ByVal pType As String, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Long
Declare Function XImage_LoadRes Lib "xcgui.dll" (ByVal id As Long, ByVal pType As String, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadZip Lib "xcgui.dll" (ByVal pZipFileName As String, ByVal pImageName As String, ByVal pPassword As String, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadZipAdaptive Lib "xcgui.dll" (ByVal pZipFileName As String, ByVal pImageName As String, ByVal pPassword As String, ByVal x1 As Long, ByVal x2 As Long, ByVal y1 As Long, ByVal y2 As Long) As Long
Declare Function XImage_LoadZipRect Lib "xcgui.dll" (ByVal pZipFileName As String, ByVal pImageName As String, ByVal pPassword As String, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long) As Long
Declare Function XImage_LoadMemory Lib "xcgui.dll" (ByVal pBuffer As Long, ByVal nSize As Long, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadMemoryRect Lib "xcgui.dll" (ByVal pBuffer As Long, ByVal nSize As Long, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadMemoryAdaptive Lib "xcgui.dll" (ByVal pBuffer As Long, ByVal nSize As Long, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Long
Declare Function XImage_LoadFromImage Lib "xcgui.dll" (ByVal pImage As Long) As Long
Declare Function XImage_LoadFileFromExtractIcon Lib "xcgui.dll" (ByVal pImageName As String) As Long
Declare Function XImage_LoadFileFromHICON Lib "xcgui.dll" (ByVal hIcon As Long) As Long
Declare Function XImage_LoadFileFromHBITMAP Lib "xcgui.dll" (ByVal hBitmap As Long) As Long
Declare Function XImage_IsStretch Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_IsAdaptive Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_IsTile Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_SetDrawType Lib "xcgui.dll" (ByVal hImage As Long, ByVal nType As Long) As Boolean
Declare Function XImage_SetDrawTypeAdaptive Lib "xcgui.dll" (ByVal hImage As Long, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Boolean
Declare Sub XImage_SetTranColor Lib "xcgui.dll" (ByVal hImage As Long, ByVal color As Long)
Declare Sub XImage_SetTranColorEx Lib "xcgui.dll" (ByVal hImage As Long, ByVal color As Long, ByVal tranColor As Byte)
